--- a/css/main.css
+++ b/css/main.css
@@ -3,19 +3,19 @@
 :root {
   --primary-title-color: #ffffff;
   --third-text-color: #ffffff;
-  --background-card: #FFFFFF;
+  --background-card: #ffffff;
   --secondary-title-color: #212121;
   --secondary-text-color: #212121;
   --primary-text-color: #757575;
   --accent-color: #2196f3;
-  --filter-button-color: #F5F4FA;
-  --border-color: #ECECEC;
-  --hero-grount: #2F303A;
-  --futer-grount: #2F303A;
-  --hero-button: #188CE8;
-  --portofolio-card-border:#EEEEEE;
-  --hero-bg:#C4C4C4;
-  --clients-color: #AFB1B8;
+  --filter-button-color: #f5f4fa;
+  --border-color: #ececec;
+  --hero-grount: #2f303a;
+  --futer-grount: #2f303a;
+  --hero-button: #188ce8;
+  --portofolio-card-border: #eeeeee;
+  --hero-bg: #c4c4c4;
+  --clients-color: #afb1b8;
 }
 
 .visually-hidden {
@@ -28,9 +28,17 @@
   border: 0;
   clip: rect(0, 0, 0, 0);
 }
+.address {
+}
 
 /*'./base/...';*/
-p, h1, h2, h3, h4, h5, h6 {
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   margin: 0;
 }
 
@@ -48,7 +56,7 @@ button {
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: normal;
   font-size: 14px;
   letter-spacing: 0.03em;
@@ -93,10 +101,12 @@ body {
 .btn_hero {
   color: var(--third-text-color);
   background-color: var(--accent-color);
-  transition: color 240ms cubic-bezier(0.4, 0, 0.2, 1), background-color 240ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 240ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 240ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.btn_hero:hover, .btn_hero:focus {
+.btn_hero:hover,
+.btn_hero:focus {
   color: var(--third-text-color);
   background-color: var(--hero-button);
 }
@@ -117,7 +127,9 @@ body {
 .btn-filtr_color {
   color: var(--secondary-text-color);
   background: var(--filter-button-color);
-  transition: color 240ms cubic-bezier(0.4, 0, 0.2, 1), background-color 240ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 240ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 240ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 240ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 240ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* не виконано крізь & бо не працює клас carent-btn*/
@@ -126,7 +138,8 @@ body {
 .carrent-btn {
   color: var(--third-text-color);
   background-color: var(--accent-color);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 /* кнопка закриття модального вікна*/
@@ -147,7 +160,8 @@ body {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.btn-close:hover, .btn-close:focus {
+.btn-close:hover,
+.btn-close:focus {
   fill: var(--accent-color);
 }
 
@@ -166,7 +180,8 @@ body {
   transition: color 240ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.logo:hover, .logo:focus {
+.logo:hover,
+.logo:focus {
   color: var(--accent-color);
 }
 
@@ -186,38 +201,54 @@ body {
   color: var(--secondary-title-color);
 }
 
-.dis-fl--d, .whyus-container {
+.dis-fl--d,
+.whyus-container {
   display: flex;
 }
 
-.dis-fl--da, .header-kontacts-flex, .header-link-item, .hero-container {
+.dis-fl--da,
+.header-kontacts-flex,
+.header-link-item,
+.hero-container {
   display: flex;
   align-items: center;
 }
 
-.dis-fl--daj, .btn-close, .whyus-item-pkt, .ourteam-socital-list, .clients-link, .backdrop, .check-text, .check-text span {
+.dis-fl--daj,
+.btn-close,
+.whyus-item-pkt,
+.ourteam-socital-list,
+.clients-link,
+.backdrop,
+.check-text,
+.check-text span {
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.dis-fl--dw, .ourteam-list,
+.dis-fl--dw,
+.ourteam-list,
 .whyus-list,
 .wedoing-list,
-.clients-list, .footer-section, .portofolio-list {
+.clients-list,
+.footer-section,
+.portofolio-list {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
 }
 
-.dis-fl--dwj, .filtr-list {
+.dis-fl--dwj,
+.filtr-list {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
 }
 
-.dis-fl--dwaj, .section-common_list {
+.dis-fl--dwaj,
+.section-common_list {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -249,7 +280,8 @@ body {
   transition: color 240ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.header-link:hover, .header-link:focus,
+.header-link:hover,
+.header-link:focus,
 .header-link .current {
   color: var(--accent-color);
 }
@@ -297,13 +329,19 @@ body {
   transition: color 240ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.header-link-item:hover, .header-link-item:focus {
+.header-link-item:hover,
+.header-link-item:focus {
   color: var(--accent-color);
 }
 
 .hero {
   background-color: var(--hero-bg);
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-jpeg.jpg);
+  background-image: linear-gradient(
+      to right,
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../images/hero-jpeg.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -407,7 +445,8 @@ body {
 
 .ourteam-card {
   background: var(--background-card);
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   display: block;
   padding-bottom: 30px;
@@ -447,7 +486,8 @@ body {
   transition: background-color 240ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.ourteam-socital-link:hover, .ourteam-socital-link:focus {
+.ourteam-socital-link:hover,
+.ourteam-socital-link:focus {
   background-color: var(--accent-color);
 }
 
@@ -475,10 +515,12 @@ body {
   border: 1px solid var(--clients-color);
   border-radius: 4px;
   fill: var(--clients-color);
-  transition: border 240ms cubic-bezier(0.4, 0, 0.2, 1), fill 240ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border 240ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 240ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.clients-link:hover, .clients-link:focus {
+.clients-link:hover,
+.clients-link:focus {
   border: 1px solid var(--hero-button);
   fill: var(--hero-button);
 }
@@ -505,7 +547,8 @@ body {
   transition: color 240ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.address:hover, .address:focus {
+.address:hover,
+.address:focus {
   color: var(--accent-color);
 }
 
@@ -516,7 +559,8 @@ body {
   transition: color 240ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.contact:hover, .contact:focus {
+.contact:hover,
+.contact:focus {
   color: var(--accent-color);
 }
 
@@ -580,7 +624,8 @@ body {
   transition: background-color 240ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.section-common_link:hover, .section-common_link:focus {
+.section-common_link:hover,
+.section-common_link:focus {
   background-color: var(--accent-color);
 }
 
@@ -598,7 +643,7 @@ body {
   line-height: 16px;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #FFFFFF;
+  color: #ffffff;
   padding-bottom: 20px;
 }
 
@@ -623,7 +668,8 @@ body {
   color: rgba(255, 255, 255, 0.6);
 }
 
-.footer-mailing_box:hover, .footer-mailing_box:focus {
+.footer-mailing_box:hover,
+.footer-mailing_box:focus {
   border: 1px solid var(--accent-color);
 }
 
@@ -647,7 +693,8 @@ body {
   /*Шютка*/
 }
 
-.footer-mailing_icon:hover, .footer-mailing_icon:focus {
+.footer-mailing_icon:hover,
+.footer-mailing_icon:focus {
   transform: rotate(25deg) translateX(-45%);
 }
 
@@ -675,16 +722,18 @@ body {
   transition: box-shadow 240ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portofolio-link:hover, .portofolio-link:focus {
+.portofolio-link:hover,
+.portofolio-link:focus {
   display: block;
   outline: none;
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .portofolio-item-title {
   font-weight: 700;
   font-size: 18px;
-  line-height: 2.00;
+  line-height: 2;
   /* identical to box height, or 200% */
   letter-spacing: 0.06em;
   color: var(--secondary-title-color);
@@ -739,7 +788,8 @@ body {
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.2);
   top: 0;
-  transition: opacity 240ms cubic-bezier(0.4, 0, 0.2, 1), visibility 240ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 240ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 240ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-hidden {
@@ -757,12 +807,14 @@ body {
   width: 528px;
   min-height: 581px;
   background-color: var(--primary-title-color);
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   position: relative;
   opacity: 1;
   transform: scale(1);
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding: 40px;
 }
 
@@ -869,7 +921,8 @@ body {
   border: 2px solid var(--futer-grount);
   border-radius: 3px;
   margin-right: 8px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-checkbox:hover + .check-text span,
